@@ -10,7 +10,7 @@
  * @version		$Id$
  */
 
-define('ICMS_VERSION_NAME', 'ImpressCMS 1.3 Final');
+define('ICMS_VERSION_NAME', 'ImpressCMS 2.0 Alpha');
 
 // For backward compatibility with XOOPS
 define('XOOPS_VERSION', ICMS_VERSION_NAME);
@@ -23,15 +23,15 @@ define('XOOPS_VERSION', ICMS_VERSION_NAME);
  * 10 = Final
  */
 
-define('ICMS_VERSION_STATUS', 10);
+define('ICMS_VERSION_STATUS', 1);
 
 /**
  * Build number
  *
  * Every release has its own build number, incrementable by 1 everytime we make a release
  */
-// impresscms_1.3.0 rc 2 = 49
-define('ICMS_VERSION_BUILD', 50);
+// impresscms_1.3.0 final = 50
+define('ICMS_VERSION_BUILD', 51);
 
 /**
  * Latest dbversion of the System Module
